# ros2-simtrack

./: .gitignore  README.md
mini_spawn_demo_ws/src/mini_spawn_demo/: package.xml  setup.cfg  setup.py
mini_spawn_demo_ws/src/mini_spawn_demo/launch/: mini_spawn.launch.py
mini_spawn_demo_ws/src/mini_spawn_demo/urdf/: turtlebot3_burger_base.xacro
turtle_autonomous_patrol_ws/: Dockerfile  boot.sh  run.sh
turtle_autonomous_patrol_ws/rosbag2_2025_07_19-04_26_59/: metadata.yaml
turtle_autonomous_patrol_ws/src/turtle_autonomous_patrol/: package.xml  setup.cfg  setup.py
turtle_autonomous_patrol_ws/src/turtle_autonomous_patrol/config/: params.yaml
turtle_autonomous_patrol_ws/src/turtle_autonomous_patrol/launch/: patrol_launch.py
turtle_autonomous_patrol_ws/src/turtle_autonomous_patrol/turtle_autonomous_patrol/: camera_alert.py  laser_avoider.py  patrol_client.py  patrol_server.py
turtle_autonomous_patrol_ws/src/turtle_autonomous_patrol/urdf/: robot.sdf  robot.urdf  turtlebot3_burger_auto_patrol.xacro
turtle_autonomous_patrol_ws/src/turtle_interfaces/: package.xml
turtle_autonomous_patrol_ws/src/turtle_interfaces/action/: Patrol.action
turtle_commander/: Dockerfile  boot.sh
turtle_commander/install/: setup.sh
turtle_commander/install/turtle_commander/lib/turtle_commander/: commander_node  reset_service_node
turtle_commander/install/turtle_commander/share/turtle_commander/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
turtle_commander/install/turtle_commander/share/turtle_commander/srv/: ResetTurtle.srv
turtle_commander/log/: latest_build
turtle_commander/src/turtle_commander/: reset_service_node.py
turtle_commander/turtle_commander/: CMakeLists.txt  package.xml  setup.py
turtle_commander/turtle_commander/turtle_commander/: reset_service_node.py
turtle_commander_ws/: CMakeCache.txt  CTestConfiguration.ini  Dockerfile  build.sh  rosidl_adapter__arguments__turtle_commander.json
turtle_commander_ws/ament_cmake_uninstall_target/: ament_cmake_uninstall_target.cmake
turtle_commander_ws/src/turtle_commander/: CMakeLists.txt  commander_node.py  package.xml  setup.cfg  setup.py
turtle_commander_ws/src/turtle_commander/turtle_commander/: commander_node.py  reset_service.py
turtle_commander_ws/src/turtle_interfaces/: CMakeLists.txt  package.xml
turtle_monitor_ws/: Dockerfile  boot.sh  run.sh
turtle_monitor_ws/src/turtle_interfaces/: CMakeLists.txt
turtle_monitor_ws/src/turtle_interfaces/srv/: SetMaxSpeed.srv
turtle_monitor_ws/src/turtle_monitor/: CMakeLists.txt  package.xml  setup.cfg  setup.py
turtle_monitor_ws/src/turtle_monitor/launch/: patrol.launch.py
turtle_monitor_ws/src/turtle_monitor/turtle_monitor/: max_speed_service.py  monitor_node.py  patrol_client.py  patrol_server.py  set_max_speed_service.py
waffle_tf2_nav_ws/: Dockerfile  boot.sh  run.sh
waffle_tf2_nav_ws/src/waffle_tf2_navigation/: package.xml  setup.cfg  setup.py
waffle_tf2_nav_ws/src/waffle_tf2_navigation/launch/: sim_tf2.launch.py
waffle_tf2_nav_ws/src/waffle_tf2_navigation/rviz/: tf2_perception.rviz
waffle_tf2_nav_ws/src/waffle_tf2_navigation/waffle_tf2_navigation/: camera_warning.py  listener.py  package.xml  static_broadcaster.py  tf_debugger.py
