<?xml version="1.0"?>
<package format="3">
  <name>turtle_commander</name>
  <version>0.0.0</version>
  <description>Turtle commander package</description>
  <maintainer email="wayming.z@gmail.com">root</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlesim</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>rosidl_generator_py</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>rosidl_generator_py</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>