<?xml version="1.0"?>
<package format="3">
  <name>mini_spawn_demo</name>
  <version>0.0.1</version>
  <description>Spawn TurtleBot3 Burger in Gazebo using xacro wrapper</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>turtlebot3_description</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
