<?xml version="1.0"?>
<package format="3">
  <name>turtle_interfaces</name>
  <version>0.0.1</version>
  <description>Custom interfaces for turtle applications</description>

  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- For generating interface code -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Message dependencies -->
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- Required group declaration -->
  <member_of_group>rosidl_interface_packages</member_of_group>

</package>
