<?xml version="1.0"?>
<package format="3">
  <name>turtle_commander</name>
  <version>0.1.0</version>
  <description>Intelligent turtle commander package</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_srvs</depend>
  <depend>turtlesim</depend>

  <exec_depend>launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
