<?xml version="1.0"?>
<package format="3">
  <name>turtle_commander</name>
  <version>0.0.0</version>
  <description>Turtle commander Python node</description>
  <maintainer email="user@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <!-- 构建依赖 -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- 运行时依赖 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>turtlesim</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_runtime_py</exec_depend>
  <exec_depend>turtle_interfaces</exec_depend>

  <!-- 测试依赖 -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
