<?xml version="1.0"?>
<package format="3">
  <name>turtle_interfaces</name>
  <version>0.0.0</version>
  <description>Custom service definitions for the Turtle Commander project</description>
  <maintainer email="user@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <depend>std_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
