<?xml version="1.0"?>
<package format="3">
  <name>turtle_monitor</name>
  <version>0.1.0</version>
  <description>Monitor and control TurtleBot3 via ROS 2 mechanisms.</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcl_interfaces</exec_depend>
  <exec_depend>action_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
